# SSOsoft

./: README  README.md  firsConfig.ini  francisConfig.ini  pyproject.toml  requirements.txt  rosazyla_sampleConfig.ini  sampleConfig.ini  setup.py  spinorConfig.ini
ssosoft/: __init__.py  destretch.py  hsgCal.py  pyDestretch.py  rosaZylaCal.py  ssosoftConfig.py
ssosoft/ifu/: IFUTools.py  comboCal.py  ferruleCal.py  francisCal.py
ssosoft/ifu/fiber_maps/: fiber_map_20250629_404.656.fits
ssosoft/imagers/: __init__.py  alignment_tools.py  destretch.py  kisipWrapper.py  legacy_destretch.py  pyDestretch.py  pyDestretch_spline.py  rosaZylaCal.py
ssosoft/spectral/: README.md  firsCal.py  hsgCal.py  inversionPrep.py  polarimetryTools.py  spectraTools.py  spinorCal.py  spinorConfig.ini
ssosoft/spectral/inversions/: config10830Default.ini  config5250DefaultNarrow.ini  config5250DefaultWide.ini  config6302Default.ini  config8542Default.ini  i0.npy  lambdaI0.npy  lambdaIC.npy  uData.npy  vData.npy
ssosoft/tools/: alignment_tools.py  movie_makers.py
